--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   go_router: ^14.3.0
   flutter_spinkit: ^5.2.1
   image_picker: ^1.1.2
-  get_it: ^8.0.1
+  get_it: ^8.0.2
   fpdart: ^1.1.0
   sqflite: ^2.4.0
   path: ^1.9.0
@@ -49,6 +49,8 @@ dependencies:
   fluttertoast: ^8.2.8
   uuid: ^4.5.1
   awesome_dialog: ^3.2.1
+  toastification: ^2.3.0
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
