--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,11 +46,15 @@ dependencies:
   sqflite: ^2.4.0
   path: ^1.9.0
   flutter_secure_storage: ^9.2.2
-  fluttertoast: ^8.2.8
   uuid: ^4.5.1
   awesome_dialog: ^3.2.1
   toastification: ^2.3.0
   url_launcher: ^6.3.1
+  provider: ^6.1.2
+  geolocator: ^13.0.2
+  google_maps_flutter: ^2.10.0
+  shared_preferences: ^2.3.3
+  dio: ^5.7.0
 
 dev_dependencies:
   flutter_test:
